[package]
name = "mpcrypto"
version = "0.1.0"
authors = [
    "Genie <letspesl@gmail.com>",
    "MyeongJin <pesl0523@neowiz.com>"
]
keywords = [
    "mpc",
    "key",
    "signature",
    "secret-shares",
    "cryptography",
    "cryptocurrency",
    "blockchain",
    "rust"
]
edition = "2018"
homepage = "https://eoseoul.io"
repository = "https://git.nwz.kr/bptf/mpcrypto"
license = "MIT/Apache-2.0"
categories = ["cryptography"]

[lib]
crate-type = ["lib"]

[dependencies]
multi-party-ecdsa = { git = "https://github.com/KZen-networks/multi-party-ecdsa" }
paillier = { git = "https://github.com/KZen-networks/rust-paillier", tag = "v0.3.0" }

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version = "0.9.5", default-features = false }

rust-crypto = { package = "rust-crypto", version = "^0.2" }

[dependencies.curv]
git = "https://github.com/KZen-networks/curv"
tag = "v0.2.0"
features =  ["ec_secp256k1"]